refacto & modif font family & fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 * {
-    font-family: JetBrains Mono;
+    font-family: JetBrains Mono, serif, sans-serif;
   }
   
